[gd_scene load_steps=7 format=3 uid="uid://ckfff2cyee05n"]

[ext_resource type="Script" path="res://addons/baked_lipsync/ShapePreview3D/ShapePreview3D.gd" id="1_k2kuh"]
[ext_resource type="PackedScene" uid="uid://tn7gxtcnoyra" path="res://addons/baked_lipsync/ShapePreview3D/ShapeTester.tscn" id="2_nma33"]
[ext_resource type="Script" path="res://addons/baked_lipsync/nodes/AudioStreamPlayerLipsync/AudioStreamPlayerLipsync.gd" id="3_cbfh6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iotp7"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(0.638788, 0.648378, 0.66352, 1)

[sub_resource type="Sky" id="Sky_6xty2"]
sky_material = SubResource("ProceduralSkyMaterial_iotp7")

[sub_resource type="Environment" id="Environment_tpdh0"]
background_mode = 2
sky = SubResource("Sky_6xty2")

[node name="ShapePreview3D" type="SubViewportContainer"]
offset_right = 128.0
offset_bottom = 105.0
stretch = true
script = ExtResource("1_k2kuh")

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
msaa_3d = 3
gui_disable_input = true
size = Vector2i(128, 105)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="SubViewport"]

[node name="ShapeTester" parent="SubViewport/Node3D" instance=ExtResource("2_nma33")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport/Node3D"]
environment = SubResource("Environment_tpdh0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport/Node3D"]
transform = Transform3D(0.866025, 0.25, -0.433013, -3.55271e-15, 0.866025, 0.5, 0.5, -0.433013, 0.75, 0, 3, 0)
metadata/_edit_lock_ = true

[node name="AudioStreamPlayerLipsync" type="AudioStreamPlayer" parent="SubViewport/Node3D"]
script = ExtResource("3_cbfh6")

[node name="Camera3D" type="Camera3D" parent="SubViewport/Node3D"]
transform = Transform3D(0.921185, 0.0908392, -0.378372, 0, 0.97237, 0.233445, 0.389124, -0.215047, 0.895733, -0.913, 0.518, 2.387)
fov = 30.0

[connection signal="mouth_shape_changed" from="SubViewport/Node3D/AudioStreamPlayerLipsync" to="." method="_on_audio_stream_player_lipsync_mouth_shape_changed"]
